--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ main{
     max-width: 1120px;
     min-width: 700px; 
     height: 100vh;
+    
 }
 #ilustracao > img{
     margin: 200px;
     max-width: 50%;
     max-height: 50%;
+    min-height: 400px;
 }
 #telaDeLogin {
     flex: 1;
